# ds-freelance-health-economics

./: .gitignore  AGENTS.md  CLAUDE.md  main.py  pyproject.toml
history/: 001_stage2_mode_split_and_patch_policy.md  002_patch_plan_addendum_stage2_explicit_lag_flag.md  003_stage2_mode_orchestration_plan.md  004_stage2_mode_orchestration_gaps.md  005_legacy_cleanup_stage2_and_evaluation.md  006_007_notebook_stage2_mode_comparison_ys.md  007_global_stage1_private_stage2_orchestration.md  008_update_007_notebook_for_shared_private_stage2_and_bands.md  009_007_report_experiment_summary.md  010_007_report_augment_analysis.md  010_fix_007_notebook_export_consistency.md  011_rewrite_007_report_from_correct_csvs.md  012_rewrite_007_report_with_integrated_experimental_recommendations.md  013_stage2_folder_refactor_and_008_experiment_plan.md  014_atc5_history_to_y_small_and_s4_mollified.md  015_s5_contiguous_atc5_lags.md  016_009_notebook_scenario_matrix_with_continuous_history.md  017_010_diagnostics_s1_vs_s8.md  018_stage2_gru_temporal_decoder.md  019_012_gru_diagnostics.md  020_013_gru_with_lag_features.md  021_014_horizon_weight_dynp_zerogating.md  022_015_nonlinear_dynamics_reg_latent16.md  023_015_plot_style_align_to_014.md  024_005_model_unified_hana_registry_and_fold_checkpoints.md  025_005_model_hana_report_writeup.md  026_006_graph_top4_plots_and_leakage_audit.md  027_006_graph_mps_inference_device_alignment.md  028_006_graph_per_drug_true_vs_pred.md  029_007_offline_ensemble_s11_s04.md  029_write_notebooks_paper_summary.md  030_008_seed_stability.md  (+13 more)
lavar/: __init__.py  (+7 more)
(+437 files in other folders)
