[project]
name = "lavar"
version = "0.1.0"
description = "LAVAR: Latent Autoencoder VAR for healthcare supply forecasting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hdbscan>=0.8.40",
    "ipykernel>=6.30.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "msoffcrypto-tool>=6.0.0",
    "numpy>=2.3.3",
    "openai-agents>=0.12.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.9.post2",
    "xlrd>=2.0.2",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
include = ["lavar*"]
